tests/ui/suggestions/issue-94171.rs
fn L(]{match
(; {`
//~^ ERROR unknown start of token: `
//~ ERROR this file contains an unclosed delimiter
